pageheader fix and video fix on mobile

--- a/src/components/PageHeader/PageHeader.scss
+++ b/src/components/PageHeader/PageHeader.scss
@@ -3,9 +3,9 @@
 @import "styles/mediaQueries.scss";
 
 .page-header {
-  height: 70vh;
+  height: 500px;
   @include sm {
-    height: 50vh;
+    height: 400px;
   }
   transition: background 1s;
 
